<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:textSize="23dp"
        android:text="@string/TextTvNombre"/>

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:hint="@string/editTextNombreHint"
        android:paddingLeft="15dp"/>

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:textSize="23dp"
        android:text="@string/TextTvApellido"/>

    <EditText
        android:id="@+id/edApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:hint="@string/editTextApellidoHint"
        android:paddingLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:textSize="17dp"
            android:text="@string/TextTvDni"/>

        <EditText
            android:id="@+id/edDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:hint="@string/editTextDniHint"
            android:inputType="number"
            android:paddingLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="17dp"
            android:layout_gravity="center"
            android:text="@string/TextTvSexo"/>

        <RadioGroup
            android:id="@+id/rdbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/rdbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButtonUnoText">
            </RadioButton>
            <RadioButton
                android:id="@+id/rdbMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButtonDosText">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:text="@string/btnGuardarText"
            android:textSize="30dp"/>
    </FrameLayout>

</LinearLayout>